tests/errors/builder_freefn.vt
builder fn f() { return this; } fn main(){}
